[package]
name = "furucombo-arbitrage"
version = "1.0.0"
edition = "2021"
authors = ["Matrix Agent"]
description = "Furucombo Metis Arbitrage Bot - Phase 1: Real Price Feeds"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
